lib/libc/locale/fix_grouping.c
@@ -1,4 +1,4 @@
-/* $NetBSD: fix_grouping.c,v 1.2 2009/01/05 03:14:30 dogcow Exp $ */
+/* $NetBSD: fix_grouping.c,v 1.3 2009/01/05 06:11:43 tnozaki Exp $ */
 
 /*
  * Copyright (c) 2001 Alexey Zelkin <phantom@FreeBSD.org>
@@ -29,9 +29,13 @@
  *     FreeBSD: fix_grouping.c,v 1.8 2003/06/26 10:46:16 phantom Exp
  */
 
+#if HAVE_NBTOOL_CONFIG_H
+#include "nbtool_config.h"
+#endif
+
 #include <sys/cdefs.h>
 #if defined(LIBC_SCCS) && !defined(lint)
-__RCSID("$NetBSD: fix_grouping.c,v 1.2 2009/01/05 03:14:30 dogcow Exp $");
+__RCSID("$NetBSD: fix_grouping.c,v 1.3 2009/01/05 06:11:43 tnozaki Exp $");
 #endif /* LIBC_SCCS and not lint */
 
 #include <ctype.h>
